--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "pg": "^8.11.3",
     "sequelize": "^6.35.1",
     "sequelize-cli": "^6.6.2"
+  },
+  "scripts": {
+    "db:create": "sequelize db:create --url postgres://postgres@localhost:5432/receiver_development"
   }
 }
